# Kursovaya3

./: README.md  pyproject.toml
src/: main.py
tests/: test_func.py
utils/: func.py
