[tool.poetry]
name = "kursovaya3"
version = "0.1.0"
description = ""
authors = ["alexeylitvinov <alextwin1976@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
g = "^0.0.3"
develop = "^0.2.1"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
